<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.StartFragment">


    <Button
        android:id="@+id/btnZona"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_spinner_on"
        android:text="@string/LABEL_ZONA"
        android:textColor="@color/text3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <Button
        android:id="@+id/btnTipo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_spinner_on"
        android:text="@string/LABEL_TIPO"
        android:textColor="@color/text3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34" />


    <Button
        android:id="@+id/btnFecha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_spinner_on"
        android:text="@string/LABEL_FECHA"
        android:textColor="@color/text3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51" />

    <Button
        android:id="@+id/btnHora"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_spinner_on"
        android:text="@string/LABEL_HORARIO"
        android:textColor="@color/text3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round2"
        android:text="@string/TXT_BUSCAR"
        android:textSize="14sp"
        android:textColor="@color/color0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862" />


</androidx.constraintlayout.widget.ConstraintLayout>