<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:background="@color/background"
    tools:context=".Fragments.NoUserFragment">


    <View
        android:id="@+id/view"
        android:layout_width="252dp"
        android:layout_height="329dp"
        android:background="@drawable/oval"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42"/>

    <EditText

        android:id="@+id/emUser"
        android:layout_width="155dp"
        android:layout_height="24dp"
        android:background="@drawable/button_round"
        android:ems="10"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:text="mdiaz"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.265" />

    <EditText
        android:id="@+id/emPass"
        android:layout_width="155dp"
        android:layout_height="24dp"
        android:background="@drawable/button_round"
        android:ems="10"
        android:text="12345J"
        android:gravity="center"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.475" />

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TXT_USUARIO"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.174" />

    <TextView
        android:id="@+id/txtContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TXT_CONTRASEÑA"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.38" />


    <TextView
        android:id="@+id/txtOlvido"
        android:layout_width="155dp"
        android:layout_height="10dp"
        android:text="@string/TXT_CONC_OLVIDO"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.551" />

    <TextView
        android:id="@+id/txtRegistro"
        android:layout_width="155dp"
        android:layout_height="10dp"
        android:text="@string/TXT_CONC_REGISTRO"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.89" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="155dp"
        android:layout_height="24dp"
        android:textSize="14sp"
        android:background="@drawable/button_round2"
        android:text="@string/BTN_INICIAR"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.816" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TXT_BIENVENIDO"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/txtContacto"
        android:layout_width="335dp"
        android:layout_height="55dp"
        android:text="@string/TXT_CONC_CONTACTO"
        android:textAlignment="center"
        android:textColor="@color/text2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <CheckedTextView
        android:id="@+id/ctvIniciar"
        android:layout_width="155dp"
        android:layout_height="28dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:gravity="center"
        android:text="@string/TXT_INICIAR"
        android:textScaleX="0.7"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.671" />


</androidx.constraintlayout.widget.ConstraintLayout>