<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_centerHorizontal="true"
android:background="@color/background"
tools:context=".Fragments.SignInFragment">


<View
    android:id="@+id/view"
    android:layout_width="252dp"
    android:layout_height="329dp"
    android:background="@drawable/oval"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.496"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.42"></View>

    <EditText
        android:id="@+id/emMail"
        android:layout_width="155dp"
        android:layout_height="24dp"
        android:background="@drawable/button_round"
        android:ems="10"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:hint="@string/HINT_NOMBRE"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.075" />

    <EditText
        android:id="@+id/emApellido"
        android:layout_width="155dp"
        android:layout_height="24dp"
        android:background="@drawable/button_round"
        android:ems="10"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:hint="@string/HINT_APELLIDO"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/emEmail"
        android:layout_width="155dp"
        android:layout_height="24dp"
        android:background="@drawable/button_round"
        android:ems="10"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:hint="@string/HINT_EMAIL"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.325" />

    <EditText
        android:id="@+id/emUsuario"
        android:layout_width="155dp"
        android:layout_height="24dp"
        android:background="@drawable/button_round"
        android:ems="10"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:hint="@string/HINT_USUARIO"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.45" />

    <EditText
        android:id="@+id/emContra"
        android:layout_width="155dp"
        android:layout_height="24dp"
        android:background="@drawable/button_round"
        android:ems="10"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:hint="@string/HINT_CONTRASEÑA"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.575" />

    <EditText
        android:id="@+id/emConfContra"
        android:layout_width="155dp"
        android:layout_height="24dp"
        android:background="@drawable/button_round"
        android:ems="10"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:hint="@string/HINT_CONFIRMAR_CONTRASEÑA"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.7" />

    <EditText
        android:id="@+id/emCelular"
        android:layout_width="155dp"
        android:layout_height="24dp"
        android:background="@drawable/button_round"
        android:ems="10"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:hint="@string/HINT_TELEFONO"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.825" />

    <Button
        android:id="@+id/btnRegistrate"
        android:layout_width="155dp"
        android:layout_height="24dp"
        android:background="@drawable/button_round2"
        android:text="@string/BTN_REGISTRATE"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/back"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>